--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,10 +1,4 @@
 <h1>id: <%= @task.id %> のタスク編集ページ</h1>
 
-<%= form_with(model: @task, local: true) do |f| %>
-  <%= f.label :content, 'タスク' %>
-  <%= f.text_field :content %>
-
-  <%= f.submit '投稿' %>
-<% end %>
-
+<%= render 'form', task: @task %>
 <%= link_to '一覧に戻る', tasks_path %>
