--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,10 +1,3 @@
 <h1>作成ページ</h1>
-
-<%= form_with(model: @task, local: true) do |f| %>
-  <%= f.label :content, 'タスク' %>
-  <%= f.text_field :content %>
-
-  <%= f.submit '投稿' %>
-<% end %>
-
+<%= render 'form', task: @task %>
 <%= link_to '一覧に戻る', tasks_path %>
